# Temporal-ai-agent

./: .gitignore  LICENSE  README.md
apps/client-app/: .env.example  README.md  main.py  pyproject.toml
apps/pdf-extraction-02-temporal/: .env.example  activities.py  helpers.py  pyproject.toml  worker.py  workflow_process_pdf.py
apps/pdf-extractions-01/: .env.example  process_pdf.py  pyproject.toml
